k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paint-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: paint-backend
  template:
    metadata:
      labels:
        app: paint-backend
    spec:
      serviceAccountName: backend-sa
      containers:
      - name: backend
        image: ${ECR_BACKEND_IMAGE}
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "400m"   
            memory: "256Mi"
          limits:
            cpu: "800m"   # 0.8 CPU
            memory: "512Mi"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: paint-backend
spec:
  type: ClusterIP
  selector:
    app: paint-backend
  ports:
  - port: 3000
