k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paint-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: "io"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:                              # <--- NEW SECTION
  - hosts:
    - canvas.budd.codes
    secretName: canvas-tls
  rules:
  - host: canvas.budd.codes
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paint-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: paint-backend
            port:
              number: 3000
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: paint-backend
            port:
              number: 3000
